<resources>
    <string name="app_name">Javon Davis</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="header_skills">Skills</string>
    <string name="header_work_experience">Work Experience</string>
    <string name="javon_email">javonldavis14@gmail.com</string>
    <string name="javon_website">ja-von.github.io</string>
    <string name="javon_mission_statement">Software Developer with over 4+ years experience in Android Development, API Development and Java and Python programming in a broad range of industries including agriculture, sales management and mobile gaming.</string>
    <string name="email_javon">Email Javon</string>
    <string name="visit_my_website">Visit my website</string>

    <string name="content_description_profile_picture">Profile picture</string>
    <string name="placeholder_name">Firstname Surname</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_location">City, Country</string>
    <string name="text_six_second">6s Overview</string>
    <string name="text_full_portfolio">Full Portfolio</string>
    <string name="text_make_app">Make your own Résumé app</string>
    <string name="text_education_1"><![CDATA[%1$s %2$s a]]></string>
    <string name="text_education_2"><![CDATA[%1$s in %2$s]]></string>
    <string name="text_from">from</string>
    <string name="text_university_placeholder">University of name name</string>
    <string name="text_and">and</string>
    <string name="text_graduate_date">%1$s in %2$s</string>
    <string name="text_major_1">Major: %1$s</string>
    <string name="text_minor_1">Minor: %1$s</string>
    <string name="text_coursework">Coursework</string>
    <string name="text_skills_header">%1$s\'s top skills</string>
    <string name="text_skill_1">Skill 1</string>
    <string name="text_skill_2">Skill 2</string>
    <string name="text_skill_3">Skill 3</string>
    <string name="text_organization_header">%1$s\'s Top Experiences</string>
    <string name="text_organization_duration">%1$s to %2$s</string>
    <string name="text_organization_title">Organization</string>
    <string name="text_project_header">%1$s\'s Top Projects</string>
    <string name="text_project_title">Project Title</string>
    <string name="text_project_date">Month Year</string>
    <string name="text_description_placeholder">Project description</string>
    <string name="relevant_technologies">Relevant Technologies</string>
    <string name="relevant_technology">Relevant Technology</string>
    <string name="text_placeholder_duty">In charge of a specific Duty at the Organization</string>
    <string name="text_skills_header_2">%1$s is also familiar with</string>
    <string name="text_skill_4">Skill 4</string>
    <string name="position">Position</string>
    <string name="at">at</string>
    <string name="text_current">Currently Works Here</string>
    <string name="title_activity_full_portfolio">Full Portfolio</string>
    <string name="content_description_google_plus">Google Plus</string>
    <string name="content_description_github">Github</string>
    <string name="content_description_linkedin">Linkedin</string>
    <string name="content_description_twitter">Twitter</string>
    <string name="content_description_facebook">Facebook</string>
    <string name="content_description_email">Email</string>
    <string name="text_proficient">Proficient</string>
    <string name="text_familiar">Familiar</string>
    <string name="text_proficient_skill">Proficient Skill</string>
    <string name="text_familiar_skill">Familiar Skill</string>
    <string name="text_links">Links</string>
</resources>
