<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.profile.javondavis.MainActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/picture_width"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/picture"
            android:padding="@dimen/picture_padding"
            android:src="@drawable/default_picture"
            android:layout_gravity="center_horizontal"
            android:onClick="onPictureClick"
            android:contentDescription="@string/content_description_profile_picture"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/nameTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_location"
            android:id="@+id/locationTextView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placeholder_name"
            android:textSize="@dimen/text_size_name"
            android:id="@+id/nameTextView"
            android:layout_above="@+id/locationTextView"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onSixSecondButtonClick"
                android:text="@string/text_six_second"
                android:enabled="false"
                android:id="@+id/six_second_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_full_portfolio"
                android:textAllCaps="false"
                android:enabled="false"
                android:onClick="onFullPortfolioButtonClick"
                android:id="@+id/full_portfolio_button" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_make_app"
            android:id="@+id/make_your_own_view"
            android:onClick="onMakeYourOwnClick"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
